objects/lightsideapps__ScriptResult__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__DebugLog__c</fullName>
        <label>Debug Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Script__c</fullName>
        <label>Script</label>
        <referenceTo>lightsideapps__Script__c</referenceTo>
        <relationshipName>ScriptResults</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lightsideapps__UserDebug__c</fullName>
        <label>User Debug</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Script Result</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Script Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>